--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^5.4.4",
+    "axios": "^1.3.6",
     "postcss": "^8.4.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -21,6 +22,7 @@
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "better-mock": "^0.3.6",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.0",
     "postcss-loader": "^7.2.4",
