--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.4.4",
     "axios": "^1.3.6",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
