--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 
 {
-    "presets": ["@babel/env", "@babel/preset-react"]
+    "presets": [
+      "@babel/env", 
+      ["@babel/preset-react", {
+        "runtime": "automatic"
+     }]
+    ]
   }
