--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "td assigment",
   "main": "index.jsx",
   "scripts": {
-    "dev": "webpack-dev-server --mode development"
+    "dev": "webpack-dev-server --mode development",
+    "test": "jest"
   },
   "author": "lyx",
   "license": "ISC",
@@ -22,13 +23,17 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "better-mock": "^0.3.6",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
     "postcss-loader": "^7.2.4",
     "postcss-nested": "^6.0.1",
     "postcss-sassy-mixins": "^2.1.0",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "url-loader": "^4.1.1",
